correct haibu dev user, add sharedmenus legacy

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "main" : "./poo.js",
   "domain": "unicornpoo.alliedmedia.org",
-  "user": "user1",
+  "user": "bc",
   "repository": {
     "type": "git",
     "url": "git://github.com/bnchdrff/unicornpoo.git"
